Ignore ID literals for individual input parameters
Signed-off-by: Matt Hess <matt.hess@swirldslabs.com>